--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,11 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import "../../vendor/livewire/flux/dist/flux.css";
